--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Por Autorizar</a>
-                    <a class="collapse-item" href="../../pages/tareas/aprobadas.html">Autorizadas</a>
+                    <a class="collapse-item" href="pages/tareas/pendientes.html">Por Autorizar</a>
+                    <a class="collapse-item" href="pages/tareas/aprobadas.html">Autorizadas</a>
                 </div>
             </div>
         </li>
@@ -275,7 +275,54 @@
                 </div>
             </div>
         </div>
-
+        <div class="container-fluid">
+            <!-- DataTales Example -->
+            <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                    <h6 class="m-0 font-weight-bold text-primary">Listado de tareas actualmente activas o en proceso</h6>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered" id="activas" width="100%" cellspacing="0">
+                            <thead>
+                            <tr>
+                                <th>Actividad</th>
+                                <th>Empleado</th>
+                                <th>Alimentos</th>
+                                <th>Inicio</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Nombre Tarea</td>
+                                <td>Nombre Empleado</td>
+                                <td>Si</td>
+                                <td>2020/06/12</td>
+                            </tr>
+                            <tr>
+                                <td>Nombre Tarea</td>
+                                <td>Nombre Empleado</td>
+                                <td>Si</td>
+                                <td>2020/06/12</td>
+                            </tr>
+                            <tr>
+                                <td>Nombre Tarea</td>
+                                <td>Nombre Empleado</td>
+                                <td>Si</td>
+                                <td>2020/06/12</td>
+                            </tr>
+                            <tr>
+                                <td>Nombre Tarea</td>
+                                <td>Nombre Empleado</td>
+                                <td>Si</td>
+                                <td>2020/06/12</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--Footer-->
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
