--- a/pages/tareas/completadas.html
+++ b/pages/tareas/completadas.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Horas Extras - Tareas por autorizar</title>    <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <title>Horas Extras - Tareas Completadas</title>
+    <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <link href="../../css/app.css" rel="stylesheet">
@@ -43,8 +44,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Por Autorizar</a>
-                    <a class="collapse-item" href="../../pages/tareas/aprobadas.html">Autorizadas</a>
+                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Pendientes</a>
+                    <a class="collapse-item" href="../../pages/tareas/completadas.html">Completadas</a>
                 </div>
             </div>
         </li>
@@ -64,20 +65,6 @@
             </div>
         </li>
 
-        <!-- Nav Item - Utilities Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities2"
-               aria-expanded="true" aria-controls="collapseUtilities">
-                <i class="fas fa-fw fa-user-friends text-light"></i>
-                <span>Usuarios</span>
-            </a>
-            <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
-                 data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="../../pages/users/usuarios.html">Lista de usuarios</a>
-                </div>
-            </div>
-        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
@@ -96,7 +83,7 @@
         <div id="content">
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                <h3>Tareas por autorizar</h3>
+                <h3>Tareas Completadas</h3>
                 <ul class="navbar-nav ml-auto">
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -111,7 +98,7 @@
                             <a class="dropdown-item" href="#">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Perfil</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../../login.html" >
+                            <a class="dropdown-item" href="../../login.html">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>Cerrar Sesion</a>
                         </div>
                     </li>
@@ -120,70 +107,24 @@
 
             <!--Contenido-->
             <div class="container-fluid">
-                <!-- DataTales Example -->
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Listado de tareas actualmente activas o en proceso</h6>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="activas" width="100%" cellspacing="0">
-                                <thead>
-                                <tr>
-                                    <th>Actividad</th>
-                                    <th>Empleado</th>
-                                    <th>Alimentos</th>
-                                    <th>Inicio</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                </tr>
-                                <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                </tr>
-                                <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                </tr>
-                                <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <h6 class="mb-0 font-weight-bold text-primary"></h6>
+                    <a href="usuarios.html" class="btn btn-danger btn-icon-split"><span class="icon text-white-50">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                        <span class="text">Reporte</span>
+                    </a>
                 </div>
-            </div>
-
-            <div class="container-fluid">
                 <!-- DataTales Example -->
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <div class="mb-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Listado de tareas pendientes por aprobar</h6>
-                        </div>
-                        <a class="btn btn-primary text-white">Aprobar seleccionadas</a>
+                        <h6 class="m-0 font-weight-bold text-primary">Listado de tareas completadas</h6>
                     </div>
                     <div class="card-body">
-
                         <div class="table-responsive">
-                            <table class="table table-bordered" id="pendientes" width="100%" cellspacing="0">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
-                                    <th></th>
                                     <th>Actividad</th>
                                     <th>Empleado</th>
                                     <th>Alimentos</th>
@@ -193,7 +134,6 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td></td>
                                     <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
                                     <td>Si</td>
@@ -201,7 +141,6 @@
                                     <td>2020/06/12</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
                                     <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
                                     <td>Si</td>
@@ -209,7 +148,6 @@
                                     <td>2020/06/12</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
                                     <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
                                     <td>Si</td>
@@ -217,7 +155,6 @@
                                     <td>2020/06/12</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
                                     <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
                                     <td>Si</td>
@@ -225,7 +162,6 @@
                                     <td>2020/06/12</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
                                     <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
                                     <td>Si</td>
@@ -233,7 +169,6 @@
                                     <td>2020/06/12</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
                                     <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
                                     <td>Si</td>
@@ -268,6 +203,6 @@
 <script src="../../js/datatables/dataTables.bootstrap4.min.js"></script>
 
 <!-- Page level custom scripts -->
-<script src="../../scripts/pendientes.js" type="module"></script>
+<script src="../../scripts/pendientes.js"></script>
 </body>
 </html>
